Rescaling predicted values

--- a/Notebooks/Notebook-1.ipynb
+++ b/Notebooks/Notebook-1.ipynb
@@ -5285,6 +5285,34 @@
     "plt.plot(y_pred[0:50], 'ro', color ='red', alpha=0.5)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PREDICTED RESULTS OF TESTING DATA\n",
+    "y_true = []\n",
+    "for val in y_pred:\n",
+    "    val = (val * (max_train-min_train) + min_train)\n",
+    "    y_true.append(val)\n",
+    "y_true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TRUE RESULTS OF TESTING DATA\n",
+    "y_test_true = []\n",
+    "for val in y_test:\n",
+    "    val = (val * (max_train-min_train) + min_train)\n",
+    "    y_test_true.append(val)\n",
+    "y_test_true"
+   ]
   }
  ],
  "metadata": {
